--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -48,11 +48,12 @@ body {
 .container {
   max-width: 43rem;
   margin: 0 auto;
+  width: 100%;
 }
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .container {
     max-width: 43rem;
     margin: 0 1rem;
   }
-}
+} */
