--- a/src/styles/financialResume.css
+++ b/src/styles/financialResume.css
@@ -26,3 +26,20 @@
   font-weight: var(--font-weight-1);
   font-size: var(--font-size-3);
 }
+
+.financial__buttons:hover {
+  background-color: var(--color-brand-3);
+  border: 1.5px solid var(--color-brand-1);
+  color: var(--color-brand-1);
+}
+
+.purple__buttons {
+  background-color: var(--color-brand-3);
+  border: 1.5px solid var(--color-brand-1);
+  color: var(--color-brand-1);
+  padding: 5px 15px;
+  border-radius: var(--radius-1);
+  cursor: pointer;
+  font-weight: var(--font-weight-1);
+  font-size: var(--font-size-3);
+}
