--- a/src/styles/sumValues.css
+++ b/src/styles/sumValues.css
@@ -15,3 +15,30 @@
   font-size: var(--font-size-3);
   font-weight: var(--font-weight-2);
 }
+
+.noEntrance {
+  margin-top: 30px;
+  background-color: var(--color-grey-5);
+  padding: 20px 16px;
+  width: 100%;
+  max-width: 43rem;
+  border: 1.5px dashed #adb5bd;
+  border-radius: var(--radius-1);
+  cursor: pointer;
+}
+
+.noEntrance > h3 {
+  text-align: center;
+  color: var(--color-grey-1);
+  font-size: var(--font-size-3);
+  font-weight: var(--font-weight-2);
+}
+
+.noEntrance > p {
+  text-align: center;
+  color: var(--color-grey-2);
+  font-size: var(--font-size-4);
+  font-weight: var(--font-weight-2);
+  margin-top: 14px;
+  cursor: pointer;
+}
