--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -51,9 +51,10 @@ body {
   width: 100%;
 }
 
-/* @media (max-width: 700px) {
+@media (max-width: 700px) {
   .container {
     max-width: 43rem;
     margin: 0 1rem;
+    padding: 0.5rem;
   }
-} */
+}
