--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -37,3 +37,17 @@
 .insert__value:hover {
   background-color: var(--color-brand-2);
 }
+
+/* Para valores menores que 700px */
+@media (max-width: 700px) {
+  .header__content {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 10px 30px;
+  }
+
+  .insert__value {
+    width: 100%;
+  }
+}
