--- a/src/styles/sumValues.css
+++ b/src/styles/sumValues.css
@@ -42,3 +42,13 @@
   margin-top: 14px;
   cursor: pointer;
 }
+
+@media (max-width: 700px) {
+  .noEntrance {
+    width: 93%;
+  }
+  .sumOfValues {
+    width: 93%;
+    padding: 14px 16px;
+  }
+}
